# gazprea-ourapplestory

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: get_llvm.cmake
grammar/: Gazprea.g4
include/: globals.h
include/AST/: AST.h  ASTGenerator.h
include/CodeGenerator/: CodeGenerator.h
include/ExternalTools/: ExternalTools.h
include/InternalTools/: CastTable.h  CondBuilder.h  ErrorBuilder.h  InternalTools.h  WhileBuilder.h
include/Scope/: FunctionSymbol.h  GazpreaTupleType.h  GazpreaType.h  Scope.h  Symbol.h  SymbolTable.h  UserType.h
runtime/src/: CMakeLists.txt  interval_tools.c  matrix_tools.c  matrix_tools.h  placeholder.c  rt_globals.h  vector_tools.c  vector_tools.h
runtime/src/rt_headers/: interval_tools.h  matrix_tools.h  rt_globals.h  stream_state.h  vector_tools.h
runtime/src/rt_source/: interval_tools.c  matrix_tools.c  stream_state.c  tests  vector_tools.c
scripts/: configureLLVM.sh  configureLLVMlocal.sh
src/: CMakeLists.txt  globals.cpp  main.cpp
src/AST/: ASTGenerator.cpp  ASTHelperFunctions.cpp
src/CodeGenerator/: Casts.cpp  CodeGenerator.cpp  DeclAss.cpp  GeneratorsAndFilters.cpp  HelperFunctions.cpp  Intervals.cpp  Matrices.cpp  MatrixOperations.cpp  Operations.cpp  Procedures.cpp  Tuples.cpp  VectorOperations.cpp  Vectors.cpp
src/ExternalTools/: ExternalTools.cpp  RTIntervalTools.cpp  RTMatrixTools.cpp  RTVectorTools.cpp
src/InternalTools/: CastTable.cpp  CondBuilder.cpp  ErrorBuilder.cpp  InternalTools.cpp  WhileBuilder.cpp
tests/: #GazpreaConfig.json#  GazpreaConfig.json  GazpreaConfig.json~  testsREADME.txt
(+720 files in other folders)
